# rizin

./: meson.build
.github/: labeler.yml
.github/workflows/: tcc.yml
binrz/rz-test/: run.c  rz-test.c
librz/analysis/: dwarf_process.c
librz/analysis/arch/pic/: pic_il.h  pic_midrange_il.c
librz/analysis/arch/pic/pic16f_memmaps/: regtypes.h
librz/analysis/p/: analysis_pic.c
librz/asm/: asm.c
librz/asm/p/: asm_hexagon.c
librz/cons/: less.c  pager.c
librz/core/: casm.c  cbin.c  core.c  meson.build
librz/core/cmd/: cmd_debug.c  cmd_search.c
librz/include/: rz_analysis.h  rz_bin_dwarf.h  rz_core.h  rz_regex.h
librz/include/rz_util/: rz_regex.h
librz/magic/: softmagic.c
librz/parse/: filter.c
librz/parse/p/: parse_arm_pseudo.c  parse_mips_pseudo.c  parse_x86_pseudo.c
librz/reg/: profile.c
librz/search/: regexp.c
librz/util/: list.c  meson.build  regex.c  str.c
librz/util/regex/: rz_regex.c
subprojects/: pcre2.wrap
subprojects/packagefiles/pcre2/: meson.build
test/db/archos/darwin-arm64/: dbg
test/db/archos/darwin-x64/: dbg
test/db/archos/linux-x64/: dbg_dmh  dbg_oo  dbg_step  dbg_trace
test/unit/: test_regex.c
